<resources>
    <string name="app_name">MoonWayGravityStaff</string>
    <string name="customer_support">Customer Support</string>
    <string name="payment">Payment</string>
    <string name="parking_information">Parking Information</string>
    <string name="user_profile">User Profile</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="your_name">Your Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="authentication_code">Authentication Code</string>
    <string name="verify">Verify</string>
    <string name="staff_portal">Staff Portal</string>
    <string name="title_activity_admin_staff_home">AdminStaffHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="entry_record">Entry Record</string>
    <string name="car_flow">Real Time Car Flow</string>
    <string name="illegal_activity">Illegal Activity</string>
    <string name="search_vehicle_number">Search Vehicle</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="staffRole">staff</string>
    <string name="adminRole">admin</string>
    <string name="title_activity_staff_drawer">StaffDrawer</string>
    <string name="end_conversation">End Conversation</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="title_activity_drawer_main">drawerMain</string>
    <string name="improper_parking">Improper Parking</string>
    <string name="suspicious_parking">Suspicious Parking</string>
    <string name="suspicious_activity">Suspicious Vehicle Activity</string>
    <string name="improper_parked">Improper Parked Slot</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="adminState">admin</string>
    <string name="staffState">staff</string>

    <string name="search">Search</string>
    <string name="license_plate">Enter the vehicle license plate number</string>
    <string-array name="item_array">
        <item>None</item>
        <item>Date</item>
        <item>Vehicle License Plate Number</item>
    </string-array>
    <string name="ActiveState">active</string>
    <string name="CloseState">close</string>
    <string name="customer_chatroom">Customer Chatroom</string>
    <string name="add_hourly_rate">Manage Parking Rate</string>
    <string name="register_staff">Register Staff</string>

    <string name="block">Block</string>
    <string name="filter_by">Filter By </string>
    <string name="floor">Floor</string>
    <string name="header_total_car_flow">Total Flow</string>
    <string name="header_parked">Parked Vehicle</string>
    <string name="header_uparked">Unparked Vehicle</string>
    <string name="number_of_floor">Number of Floor</string>
    <string name="done">Done</string>


    <string name="modify">Modify</string>

    <string name="staff_name">Staff Name</string>
    <string name="staff_email">Staff Email</string>
    <string name="no_chatroom_found">No chatroom found.</string>
    <string name="announcement">Announcement</string>
    <string name="title_activity_manage_profile">ManageProfile</string>
    <string name="view_transaction">View Transaction</string>

</resources>
