<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_48"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_carflow"
            android:icon="@drawable/carflow"
            android:title="@string/car_flow" />
        <item
            android:id="@+id/nav_suspicous"
            android:icon="@drawable/suspicious"
            android:title="@string/suspicious_parking" />
        <item
            android:id="@+id/nav_improper"
            android:icon="@drawable/parking"
            android:title="@string/improper_parking" />
    </group>

    <item android:title="Settings">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout"
                android:title="@string/logout" />

        </menu>
    </item>

</menu>
