<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.moonwaygravitystaff.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_carflow"
        android:name="com.example.moonwaygravitystaff.CarFlowFragment"
        android:label="@string/car_flow"
        tools:layout="@layout/fragment_car_flow" />

    <fragment
        android:id="@+id/nav_suspicous"
        android:name="com.example.moonwaygravitystaff.SuspiciousFragment"
        android:label="@string/suspicious_parking"
        tools:layout="@layout/fragment_suspicious" />

    <fragment
        android:id="@+id/nav_improper"
        android:name="com.example.moonwaygravitystaff.ImproperFragment"
        android:label="@string/improper_parking"
        tools:layout="@layout/fragment_improper" />

    <fragment
        android:id="@+id/nav_announcement"
        android:name="com.example.moonwaygravitystaff.ManageAnnouncement"
        android:label="@string/announcement"
        tools:layout="@layout/fragment_manage_announcement" />
    <fragment
        android:id="@+id/nav_transaction"
        android:name="com.example.moonwaygravitystaff.ViewTransaction"
        android:label="@string/view_transaction"
        tools:layout="@layout/fragment_view_transaction" />
</navigation>