<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:paddingStart="@dimen/keyline_4"
    android:paddingTop="@dimen/keyline_5"
    android:paddingEnd="@dimen/keyline_4"
    android:paddingBottom="@dimen/keyline_5">

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/logo"
            android:layout_marginBottom="@dimen/keyline_4"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/staff_icon"
            android:layout_marginTop="@dimen/keyline_2"
            app:civ_border_overlay="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/staff_portal"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-medium"
            android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/authentication_code"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/authentication_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/authentication_code"
                android:fontFamily="sans-serif-medium"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_verify"
            android:layout_marginTop="@dimen/keyline_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/verify"
            android:textColor="@color/white"
            android:background="@color/black"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

